# nxdeps

./: README.rst  pyproject.toml
nxdeps/: __init__.py
tests/: test_get_projective_edges.py  test_is_projective.py
