[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "nxdeps"
author = "Kemal Kurniawan"
author-email = "kemal@kkurniawan.com"
home-page = "https://github.com/kmkurn/nxdeps"
requires = ["networkx ~=2.4"]
requires-python = ">=3.6,<4"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
]

[tool.flit.metadata.requires-extra]
test = ["pytest ~=5.4.1", "pytest-cov"]
dev = ["flake8", "flake8-mypy", "yapf"]
